Fix spacing on detail view when there's a source and no status

--- a/src/css/widget.scss
+++ b/src/css/widget.scss
@@ -159,6 +159,7 @@ body {
 }
 
 .status {
+  @include clearfix;
   margin-top: 0.4em;
   font-size: 0.75em;
   color: #3b3b3b;
